2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.4.

==================== 2.22.3 ====================

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.22.3

2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-cairo.h: Make cairo render functions return a gboolean. Returns TRUE
	if the image can't be rendered
	* rsvg.c: Check && handle the return value
	* rsvg-cairo-render.c: Implement the above. Also, return FALSE if we're asked
	to render an ID that doesn't exist

	Collectively, fixes #540383 - rsvg_handle_render_cairo_sub - if ID not found, 
	return an error and/or dont render whole SVG
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-private.h: #539488 - migrate use of GMemChunk to GSlice, from Felix Riemann
	* rsvg-base.c: ditto
	* rsvg-styles.c: ditto
	* rsvg-cairo-render.c: ditto
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-text.c: #524835 - nautilus crashed with SIGSEGV
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>
	
	* gdk-pixbuf-loader/io-svg.c: #538149 - svg_loader.so does not set license field 
	in GdkPixBufFormat
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-filters.c: #548154 - Nautilus Segmentation fault when displaying SVG file
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* gdk-pixbuf-loader/io-svg.c: #549418 - build failure: test-display.c 
	io-svg.c format not a string literal and no format arguments
	* test-display.c: Ditto
	
2008-08-25  Dominic Lachowicz <domlachowicz@gmail.com>	

	* rsvg-path.c: 549256 - some arcs are not well drawn in SVG path. From
	Frederic Wang <fred.wang%40free.fr>
	
2008-08-22  Dominic Lachowicz <domlachowicz@gmail.com>

	* tests/rsvg-test.c: Bug #547981 - librsvg-test.c doesn't build on x86_64
	
2008-08-21  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-path.c: Bug #548494 - bad rendering for some wacko
	SVG path data
	